Kubernetes/Storage/pjt pingpong logout persistent volume/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dep-loggen
  name: dep-loggen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dep-loggen
  template:
    metadata:
      labels:
        app: dep-loggen
    spec:
      volumes:
      - name: myvol
        persistentVolumeClaim:
            claimName: image-claim

      # 1. Init Container runs first to guarantee log.txt is a FILE, not a folder
      containers:
      # 2. Your Log Generator Container
      - image: raghvendrashrinet/projects:hashgenv1
        name: logout
        volumeMounts:
        - name: myvol
          mountPath: /app/log.txt
          subPath: log.txt       # Mount file from volume

      # 3. Your Web App Container
      - image: raghvendrashrinet/projects:webappv1
        name: webapp
        volumeMounts:
        - name: myvol
          mountPath: /app/log.txt
          subPath: log.txt       # Mount file from volume
        - name: myvol
          mountPath: /app/pingpong_count.txt
          subPath: pingpong_count.txt
