Kubernetes/Storage/pjt pingpong logout persistent volume/manifest/logout_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logout
  labels:
    app: dep-loggen
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: dep-loggen
