Kubernetes/Storage/pjt pingpong logout persistent volume/manifest/webapp_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: dep-loggen
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: dep-loggen
